[project]
name = "this-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "datasets>=4.1.1",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
]
